fixed issue with tier label margin causing layout issues on export

--- a/src/stylesheets/Components/tierRow.scss
+++ b/src/stylesheets/Components/tierRow.scss
@@ -68,6 +68,7 @@ tier-row {
       width: 90px;
       text-align: center;
       text-overflow: ellipsis;
+      margin: 0;
     }
   }
 
